# predictive-maintenace

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_api.ps1  setup.ps1  test.ps1  train.ps1
src/pm/: config.py  constants.py
src/pm/api/: main.py  metrics.py  predict.py  schemas.py
src/pm/data/: load_data.py
src/pm/features/: build_features.py  time_series_features.py
src/pm/models/: preprocess.py  split.py  train_baseline.py
src/pm/scripts/: make_labeled_trainset.py  sanity_check_data.py
tests/: test_api.py  test_smoke.py  test_split.py
